# samplesize

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: ARCHITECTURE.md  COOKBOOK.md  METHOD_COVERAGE.md  RELEASE.md  ROADMAP.md  TROUBLESHOOTING.md  index.md
docs/examples/: 01-one-mean-t-test.md  02-two-means-t-test.md  03-cox-survival.md  04-cluster-rct.md  05-simon-two-stage.md
plugin/.claude-plugin/: marketplace.json  plugin.json  validate.py
plugin/agents/: calculator.md  methodologist.md  validator.md
plugin/commands/: ss-calc.md  ss-curve.md  ss-design.md  ss-power.md  ss-report.md  ss-validate.md
plugin/skills/samplesize-calculate/: SKILL.md
plugin/skills/samplesize-design/: SKILL.md
plugin/skills/samplesize-report/: SKILL.md
plugin/skills/samplesize-validate/: SKILL.md
samplesize/: __init__.py  __main__.py  cli.py  doctor.py
samplesize/core/: __init__.py  adjustments.py  distributions.py  effect_sizes.py
samplesize/registry/: __init__.py  decision_tree.yaml  methods.json  synonyms.yaml
samplesize/reporting/: __init__.py  audit.py  code_export.py  plots.py  protocol.py  tables.py
samplesize/reporting/templates/: protocol.en.yaml  protocol.ko.yaml
samplesize/tests/: __init__.py  acceptance_sampling.py  anova.py  anova_rm.py  anova_simulation.py  capability.py  chi_square.py  ci_correlation.py  ci_exponential.py  ci_means.py  ci_proportions.py  ci_regression.py  ci_sd.py  ci_variance.py  cluster.py  cluster_survival.py  coefficient_alpha.py  conditional_power.py  conditional_power_crossover.py  control_charts.py  correlated_proportions.py  correlation.py  correlation_simulation.py  correlation_specialty.py  cox.py  cross_over.py  cross_over_higher_order.py  cross_over_mxm.py  cure_model.py  diagnostic.py  equivalence.py  estimators.py  exponential.py  group_sequential.py  group_sequential_simulation.py  group_sequential_survival.py  hotelling.py  linear_regression.py  logistic_regression.py  manova.py  (+37 more)
scripts/: gen_method_coverage.py
tests/unit/: test_doctor.py  test_registry.py  test_registry_signature_parity.py
tests/validation/: conftest.py  test_fixture_consistency.py
tests/validation/fixtures/: _template.yaml  acceptance_sampling_attributes.yaml  ancova_one_way.yaml  anova_mixed_between_within.yaml  anova_repeated_measures_within.yaml  bartlett_variances_simulation.yaml  bioequivalence_two_means_ratios.yaml  brown_forsythe_variances_simulation.yaml  chi_square.yaml  chi_square_effect_size_estimator.yaml  ci_auc_roc.yaml  ci_coefficient_alpha.yaml  ci_cp.yaml  ci_cpk.yaml  ci_difference_two_means.yaml  ci_difference_two_means_tolerance.yaml  ci_difference_two_proportions.yaml  ci_exponential_hazard_rate.yaml  ci_exponential_lifetime_mean.yaml  ci_exponential_lifetime_percentile.yaml  ci_exponential_reliability.yaml  ci_intraclass_correlation.yaml  ci_kappa.yaml  ci_kendall_tau_b.yaml  ci_linear_regression_slope.yaml  ci_michaelis_menten.yaml  ci_odds_ratio_two_proportions.yaml  ci_one_mean.yaml  ci_one_mean_tolerance.yaml  ci_one_proportion.yaml  ci_one_proportion_finite.yaml  ci_one_sd_relative_error.yaml  ci_one_sd_tolerance.yaml  (+202 more)
