[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samplesize"
version = "0.1.0"
description = "Sample-size and power calculations for clinical and applied research"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Mingul Kim", email = "kimmingul@gmail.com" },
]
keywords = [
  "sample-size",
  "power-analysis",
  "statistics",
  "clinical-trials",
  "biostatistics",
  "research",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Healthcare Industry",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pyyaml>=6.0",
  "matplotlib>=3.8",
  "mpmath>=1.3",
]

[project.urls]
Homepage = "https://github.com/kimmingul/samplesize-copilot"
Documentation = "https://kimmingul.github.io/samplesize-copilot/"
Repository = "https://github.com/kimmingul/samplesize-copilot"
Issues = "https://github.com/kimmingul/samplesize-copilot/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
]

[project.scripts]
samplesize = "samplesize.cli:main"

[tool.setuptools.packages.find]
include = ["samplesize*"]

[tool.setuptools.package-data]
samplesize = [
  "registry/*.json",
  "registry/*.yaml",
  "reporting/templates/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# F841 (unused locals) and E731 (lambda assignment) are stylistic and
# sometimes intentional in numerical code; revisit case-by-case.
ignore = ["F841", "E731"]
